--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,4 +18,4 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install pytest
-      - run: pytest tests/
+      - run: pytest test/
